# flimsy-execution-engine

./: Cargo.toml  readme.md
src/: activity_core.rs  client.rs  inmemory_db.rs  main.rs  server.rs  worker_core.rs  worker_events.rs  workflow_core.rs
src/core/: activity.rs  client.rs  mod.rs  worker.rs  worker_core.rs  worker_events.rs  workflow.rs  workflow_core.rs
src/example/: example.rs  mod.rs
