[package]
name = "jamesporal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version="0.4.39", features =["serde"] }
tokio = { version = "1.43.0", features = ["full", "time" ] }
futures = "0.3.31"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
async-trait = "0.1.85"
axum = {version="0.8.1", features =["macros"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
dashmap = "6.1.0"
